fix white space

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -47,6 +47,7 @@
     -ms-animation: fadein 1s;
     /* Internet Explorer */
     -o-animation: fadein 1s;
+    height: 100%;
 }
 
 @keyframes fadein {
