--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ body {
     font-size: 18px;
     background-color: #060606;
     color: white;
+    height: 100%;
 }
 
 p {
